# loka

./: .gitignore  Cargo.toml  README.md
.agents/plans/: 2026-05-28-layered-prompt-method.md  2026-05-28-rust-agent-workflow.md
.github/workflows/: ci.yml  release.yml
evals/fixtures/: ask.json  chat.json  learning.json  multi-agent.json  skill-creation.json
src/: agent.rs  config.rs  evals.rs  gateway.rs  learning.rs  lib.rs  llm.rs  main.rs  mcp.rs  memory.rs  messages.rs  model.rs  multi_agent.rs  permissions.rs  prompt.rs  runtime.rs  session.rs  session_context.rs  session_summary.rs  skill_creation.rs  skills.rs  tokens.rs  tool_runtime.rs  tools.rs  tui.rs  wiki.rs
tests/: ask_flow.rs  ask_flow_test.rs  chat_flow.rs  chat_flow_test.rs  config.rs  config_test.rs  eval_fixtures.rs  gateway.rs  gateway_test.rs  learning.rs  learning_review.rs  learning_review_test.rs  learning_test.rs  llm_client_test.rs  mcp_adapter.rs  memory_client.rs  memory_client_test.rs  model_client.rs  multi_agent.rs  multi_agent_test.rs  prompt_builder.rs  prompt_builder_test.rs  runtime_executor.rs  runtime_executor_test.rs  session_store.rs  session_summary.rs  session_summary_test.rs  skill_creation.rs  skill_creation_test.rs  skill_store.rs  skill_store_test.rs  token_accounting.rs  token_accounting_test.rs  tool_policy.rs  tool_policy_test.rs  tool_runtime.rs  tool_runtime_test.rs  tui.rs  tui_test.rs  wiki_client_test.rs
