[package]
name = "loka-agent"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"

[[bin]]
name = "loka"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive", "env"] }
futures = "0.3.32"
ignore = "0.4.25"
reqwest = { version = "0.13.4", features = ["json"] }
rusqlite = { version = "0.40.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
time = { version = "0.3.47", features = ["formatting"] }
tokio = { version = "1.52.3", features = ["macros", "process", "rt-multi-thread", "time"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.23.1", features = ["v4"] }

[dev-dependencies]
httpmock = "0.8.3"
tempfile = "3.27.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
