[package]
name = "loka-agent"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"

[[bin]]
name = "loka"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
clap = { version = "4.6.1", features = ["derive", "env"] }
crossterm = "0.29.0"
futures = "0.3.32"
hex = "0.4.3"
ignore = "0.4.25"
ratatui = "0.30.0"
regex = "1.12.3"
reqwest = { version = "0.13.4", features = ["json", "query", "stream"] }
rusqlite = { version = "0.40.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
time = { version = "0.3.47", features = ["formatting", "local-offset"] }
tokio = { version = "1.52.3", features = ["macros", "net", "process", "rt-multi-thread", "signal", "time"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.23.1", features = ["v4"] }

[dev-dependencies]
httpmock = "0.8.3"
tempfile = "3.27.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
